@@ -1,3 +1,6 @@
+* Wed Apr 19 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.1-0
+- Updated logrotate to use new lastaction API
+
 * Wed Jan 25 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
 - Updated calls to aide::rule and auditd::rule
 
